src/test/ui/consts/control-flow/assert.const_panic.stderr
error: any use of this value will cause an error
  --> $DIR/assert.rs:10:15
   |
LL | const _: () = assert!(false);
   | --------------^^^^^^^^^^^^^^-
   |               |
   |               the evaluated program panicked at 'assertion failed: false', $DIR/assert.rs:10:15
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

